Clean vercel.jn

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "functions": {
-    "api/**/*.js": {
-     "runtime": "now-php@1.0.0"
-
+    "api/**/*.php": {
+      "runtime": "now-php@1.0.0"
     }
   }
 }
